# building-energy-spark-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docker/: docker-compose.yml
docker/grafana/dashboards/: energy_streaming.json
docker/grafana/provisioning/dashboards/: provider.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
docs/: dashboard.md  design.md  notebook_execution_notes.md
docs/figures/: .gitkeep
notebooks/: 01_batch_ml_energy_prediction.ipynb  02_kafka_producer.ipynb  03_spark_streaming_prediction.ipynb
src/energy_pipeline/: __init__.py  batch_train.py  config.py  dashboard_export.py  datasets.py  features.py  metrics.py  producer.py  schemas.py  spark.py  stream_infer.py
tests/: conftest.py  test_config.py  test_dashboard_export.py  test_datasets.py  test_features.py  test_schemas.py
